{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 171,
  "lineage": "73689ac9-fec2-3bc6-109e-127e5dbadb0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NG-ElasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c34b0aa7204437f",
            "association_id": "eipassoc-0b5f2834436f2fa42",
            "domain": "vpc",
            "id": "eipalloc-01c34b0aa7204437f",
            "network_border_group": "us-west-1",
            "network_interface": "eni-05c4060c0207bacac",
            "private_dns": "ip-172-20-6-6.us-west-1.compute.internal",
            "private_ip": "172.20.6.6",
            "public_dns": "ec2-13-52-149-193.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.149.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PickMe/Onduty-NatGateway"
            },
            "tags_all": {
              "Name": "PickMe/Onduty-NatGateway"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:internet-gateway/igw-04581ed1128047b68",
            "id": "igw-04581ed1128047b68",
            "owner_id": "053855242670",
            "tags": {
              "Name": "PickMe/Onduty_IGW"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_IGW"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c34b0aa7204437f",
            "association_id": "eipassoc-0b5f2834436f2fa42",
            "connectivity_type": "public",
            "id": "nat-025bf24edefb01d28",
            "network_interface_id": "eni-05c4060c0207bacac",
            "private_ip": "172.20.6.6",
            "public_ip": "13.52.149.193",
            "subnet_id": "subnet-08866a40de0b83099",
            "tags": {
              "Name": "PickMe/Onduty-NatGateway"
            },
            "tags_all": {
              "Name": "PickMe/Onduty-NatGateway"
            }
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:route-table/rtb-099f43f304cf9d098",
            "id": "rtb-099f43f304cf9d098",
            "owner_id": "053855242670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025bf24edefb01d28",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PickMe/Onduty-Router"
            },
            "tags_all": {
              "Name": "PickMe/Onduty-Router"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:route-table/rtb-06c5442ff464dd68c",
            "id": "rtb-06c5442ff464dd68c",
            "owner_id": "053855242670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04581ed1128047b68",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9244d4699ec27d4",
            "route_table_id": "rtb-099f43f304cf9d098",
            "subnet_id": "subnet-0aedf5d5ba352583a"
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054138eca672d73ec",
            "route_table_id": "rtb-099f43f304cf9d098",
            "subnet_id": "subnet-060800444b4bebcbe"
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4919ab6216a8613",
            "route_table_id": "rtb-099f43f304cf9d098",
            "subnet_id": "subnet-08a571be704f40ba8"
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0044780e7b3eb8127",
            "route_table_id": "rtb-099f43f304cf9d098",
            "subnet_id": "subnet-06d53ad8937594cc4"
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private4",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1b44f568be2bac",
            "route_table_id": "rtb-099f43f304cf9d098",
            "subnet_id": "subnet-0d6d8dec9b7691aab"
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private5",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070ff5ba904f3088b",
            "route_table_id": "rtb-099f43f304cf9d098",
            "subnet_id": "subnet-0e9d922c24418b593"
          },
          "dependencies": [
            "aws_eip.NG-ElasticIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private6",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b39fc25a105bcea",
            "route_table_id": "rtb-06c5442ff464dd68c",
            "subnet_id": "subnet-08866a40de0b83099"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0808f03dcb8493cde",
            "route_table_id": "rtb-06c5442ff464dd68c",
            "subnet_id": "subnet-0bf80b90d0ba545d2"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0193a00429514de73",
            "route_table_id": "rtb-06c5442ff464dd68c",
            "subnet_id": "subnet-076226aa8c3f265ae"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_subnet.public3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pickme_onduty-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:security-group/sg-0ccf9e42936d69b9f",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming traffic from anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccf9e42936d69b9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "var.aws-sg-cluster-name",
            "name_prefix": "",
            "owner_id": "053855242670",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PickMe-onduty-cluster-SG"
            },
            "tags_all": {
              "Name": "PickMe-onduty-cluster-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pickme_onduty-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1168597722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ccf9e42936d69b9f",
            "security_group_rule_id": "sgr-0dfdacd48ee235d26",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pickme_onduty-cluster-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-0aedf5d5ba352583a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aedf5d5ba352583a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Private_workerNode_subnet_1",
              "Visibility": "Private"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Private_workerNode_subnet_1",
              "Visibility": "Private"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-060800444b4bebcbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060800444b4bebcbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Private_database_subnet_2",
              "Visibility": "Private"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Private_database_subnet_2",
              "Visibility": "Private"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-08a571be704f40ba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a571be704f40ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Private_cache_subnet_3",
              "Visibility": "Private"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Private_cache_subnet_3",
              "Visibility": "Private"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-06d53ad8937594cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d53ad8937594cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Private_workerNode_subnet_4",
              "Visibility": "Private"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Private_workerNode_subnet_4",
              "Visibility": "Private"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-0d6d8dec9b7691aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6d8dec9b7691aab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Private_database_subnet_5",
              "Visibility": "Private"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Private_database_subnet_5",
              "Visibility": "Private"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-0e9d922c24418b593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9d922c24418b593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Private_cache_subnet_6",
              "Visibility": "Private"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Private_cache_subnet_6",
              "Visibility": "Private"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-08866a40de0b83099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08866a40de0b83099",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Public_workerNode_subnet_1",
              "Visibility": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Public_workerNode_subnet_1",
              "Visibility": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-0bf80b90d0ba545d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf80b90d0ba545d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Public_Database_subnet_2",
              "Visibility": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Public_Database_subnet_2",
              "Visibility": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:subnet/subnet-076226aa8c3f265ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076226aa8c3f265ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053855242670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PickMe/Onduty_Public_cache_subnet_3",
              "Visibility": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_Public_cache_subnet_3",
              "Visibility": "Public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04e9093d7968607b8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:053855242670:vpc/vpc-04e9093d7968607b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-06e36f438da2da05d",
            "default_route_table_id": "rtb-0b9163cd82404c2af",
            "default_security_group_id": "sg-07654269befebac68",
            "dhcp_options_id": "dopt-0ce0f377e529f264d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e9093d7968607b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9163cd82404c2af",
            "owner_id": "053855242670",
            "tags": {
              "Name": "PickMe/Onduty_VPC"
            },
            "tags_all": {
              "Name": "PickMe/Onduty_VPC"
            }
          }
        }
      ]
    }
  ]
}